# Medallion

./: .cursorrules  .env.example  .gitignore  API_RESPONSE_TEMPLATE.md  APPLY_AND_TEST_NOW.md  APPLY_BRONZE_TO_SILVER_FIX.sql  APPLY_COMPLETE_SILVER_TO_GOLD.sql  APPLY_INTERVIEW_AND_EXCEL_MIGRATIONS.sql  BACKEND_SETUP_COMPLETE.md  CHECKLIST.md  COMPLETE_DIAGNOSIS_AND_FIX.sql  COMPLETE_WORKFLOW_GUIDE.md  CURRENT_AUTOMATION_STATUS.md  CURRENT_STATUS.md  CURRENT_STATUS_SUMMARY.md  DO_THIS_NOW.md  FINAL_MISSING_SUMMARY.md  FINAL_STATUS.md  FIX_AUTO_CATEGORIZE_TRIGGER.sql  FIX_BRONZE_TO_SILVER_COMPLETE.sql  FIX_BRONZE_TO_SILVER_TRIGGERS.sql  FIX_INCOME_DOCUMENTS_TRIGGER.sql  FIX_PROCESS_INCOME_TO_GOLD_TRIGGER.sql  FIX_WI_PROCESSING_COMPLETE.sql  GET_OPERATIONAL.md  HYBRID_ARCHITECTURE_GUIDE.md  INTEGRATION_COMPLETE.md  PIPELINE_FLOW_EXPLANATION.md  PROJECT_STATUS.md  QUICK_TEST_GUIDE.md  README (1).md  README.md  READY_TO_START.md  SCHEMA_COMPARISON.md  SILVER_LAYER_SETUP.md  SIMPLE_BRONZE_ONLY.sql  UPDATE_API_KEY.md  WALKTHROUGH.md  WHAT_IS_MISSING.md  WORKFLOW_STATUS.md  (+42 more)
backend/: README.md  main.py  requirements.txt
dagster_pipeline/: README.md  __init__.py
docs/: 00_DISCOVERY_REPORT.md  00_PROGRESS.md  01_API_ANALYSIS.md  02_BUSINESS_RULES.md  03_BRONZE_LAYER.md  03_BRONZE_LAYER_MIGRATION_GUIDE.md  04_SILVER_LAYER.md  05_GOLD_LAYER.md  06_DAGSTER_ORCHESTRATION.md  FIXES_APPLIED.md  PDF_STORAGE_IMPLEMENTATION.md
frontend/: package.json  start-frontend.sh
scripts/: cleanup_duplicate_pdfs_safe.sql  cleanup_duplicate_pdfs_supabase.sql  fix_tax_projections_mapping.sql  (+1 more)
(+44 files in other folders)
